[package]
name = "mhycrypt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "mhycrypt"
crate-type = ["cdylib", "rlib"]

[dependencies]
rand_mt = "4.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[target.'cfg(windows)'.dependencies]
openssl = { version = "0.10", features = ["vendored"] }

[target.'cfg(unix)'.dependencies]
openssl = "0.10"
